fixed inleiding on mobile

--- a/CSS/paginas/home.css
+++ b/CSS/paginas/home.css
@@ -57,10 +57,20 @@
         width: 95%;
     }
     
-     .getuigenis:nth-of-type(2) {
+    #inleiding p, #inleiding h3 {
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    #inleiding img {
+        width: 100%;
+    }
+
+
+    .getuigenis:nth-of-type(2) {
         margin-left: 0%;
     }
-    
+
     .getuigenis {
         width: 100%;
     }
@@ -78,7 +88,7 @@
     .geel {
         padding: 25px;
     }
-    
+
     .title {
         margin-top: 28px;
     }
@@ -89,7 +99,7 @@
     .inleiding {
         width: 70%;
     }
-    
+
     .getuigenis img{
         width:30%;
     }
@@ -102,7 +112,7 @@
         width: 87%;
         float: right;
     }
-    
+
     .getuigenis p, .getuigenis h3 {
         width: 58%;
     }
